Add new linting components (#364)
* flake8-bugbear
* flake8-comprehensions
* flake8-docstrings (replaces pydocstyle)

--- a/tox.ini
+++ b/tox.ini
@@ -18,14 +18,8 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-source = src/bluesearch
-envlist =
-    lint
-    py37
-    py38
-    py39
-    docs
-    check-packaging
+sources = setup.py src/bluesearch tests benchmarks
+envlist = lint, py{37, 38, 39}, docs, check-packaging
 
 [testenv]
 download = true
@@ -39,31 +33,31 @@ basepython = python3.7
 skip_install = true
 deps =
     bandit==1.7.0
-    black==20.8b1
-    flake8==3.8.4
-    isort==5.7.0
-    pydocstyle==5.1.1
+    black==21.5b1
+    flake8==3.9.2
+    flake8-bugbear==21.4.3
+    flake8-comprehensions==3.5.0
+    flake8-docstrings==1.6.0
+    isort==5.8.0
     mypy==0.812
-    pandas-stubs==1.0.4.5
+    pandas-stubs==1.1.0.6
     sqlalchemy-stubs==0.4
 commands =
-    flake8 {[tox]source} tests benchmarks
-    isort --honor-noqa --profile black --check setup.py {[tox]source} tests benchmarks
-    pydocstyle {[tox]source}
-    black -q --check setup.py {[tox]source} tests benchmarks
-    bandit -qr {[tox]source}
-    mypy --config-file .mypy.ini  setup.py {[tox]source} tests
-    mypy --config-file .mypy.ini  {[tox]source} benchmarks
+    flake8 {posargs:{[tox]sources}}
+    isort --check {posargs:{[tox]sources}}
+    black --check {posargs:{[tox]sources}}
+    bandit -qr --exclude "benchmarks/,tests/" {posargs:{[tox]sources}}
+    mypy --exclude "benchmarks/conftest.py" {posargs:{[tox]sources}}
 
 [testenv:format]
 basepython = python3.7
 skip_install = true
 deps =
-    black==20.8b1
-    isort==5.7.0
+    black==21.5b1
+    isort==5.8.0
 commands =
-    isort --honor-noqa --profile=black setup.py {[tox]source} tests benchmarks
-    black setup.py {[tox]source} tests benchmarks
+    isort {posargs:{[tox]sources}}
+    black {posargs:{[tox]sources}}
 
 [testenv:docs]
 basepython = python3.7
@@ -141,6 +135,11 @@ show_missing = False
 count = False
 max-line-length = 88
 extend-ignore = E203
+docstring-convention = numpy
+per-file-ignores =
+    tests/*:D
+    benchmarks/*:D
 
-[pydocstyle]
-convention = numpy
+[isort]
+profile = black
+honor_noqa = true
