Move from typer to argparse
The checking of the existence of the input paths and the checking of the fact
that the paths do not refer to a directory but regular files instead were
not migrated.

Indeed, argparse does not provide such features as typer does. Implementing
these features ourselves means creating a small library like typer inside
our codebase. This is re-inventing the wheel. That does not make sense.

--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -29,7 +29,7 @@ stages:
         file: annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein
         label: protein
     do:
-      cmd: python clean.py ../../annotations/ner/${item.file}.jsonl ${item.label} ${key}
+      cmd: python clean.py ../../annotations/ner/${item.file}.jsonl ${item.label} --renamed_label ${key}
       deps:
       - Dockerfile
       - clean.py
