--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -111,10 +111,14 @@ seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
 dropout = 0.1
 accumulate_gradient = 3
-patience = 800  # steps, 4 evaluations if every 200
-max_epochs = 500  # epochs, huge value to be investigated
-max_steps = 0  # ignored when 0
-eval_frequency = 200  # if changed, change patience too
+# steps, 4 evaluations if every 200
+patience = 800
+# epochs, huge value to be investigated
+max_epochs = 500
+# ignored when 0
+max_steps = 0
+# if changed, change patience too
+eval_frequency = 200
 frozen_components = []
 before_to_disk = null
 
