Move to Transformer-based spaCy pipelines for all our NER models (#351)
Co-authored-by: Emilie Delattre <emilie.delattre@epfl.ch>

--- a/data_and_models/annotations/ner/.gitignore
+++ b/data_and_models/annotations/ner/.gitignore
@@ -31,21 +31,30 @@
 /annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.jsonl
 /annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.jsonl
 /rule_based_patterns.jsonl
-/annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease.train.spacy
-/annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease.dev.spacy
-/annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi.train.spacy
-/annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi.dev.spacy
-/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.train.spacy
-/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.dev.spacy
-/annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.train.spacy
-/annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.dev.spacy
-/annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein.train.spacy
-/annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein.dev.spacy
-/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.train.spacy
-/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.dev.spacy
-/annotations13_CharlotteLorin_2020-09-02_raw7_10EntityTypes.train.spacy
-/annotations13_CharlotteLorin_2020-09-02_raw7_10EntityTypes.dev.spacy
-/annotations11_CharlotteLorin_2020-08-28_raw1_10EntityTypes.train.spacy
-/annotations11_CharlotteLorin_2020-08-28_raw1_10EntityTypes.dev.spacy
-/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.train.spacy
-/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.dev.spacy
+/annotations_cell_compartment.jsonl
+/annotations_cell_type.jsonl
+/annotations_chemical.jsonl
+/annotations_disease.jsonl
+/annotations_drug.jsonl
+/annotations_organ.jsonl
+/annotations_organism.jsonl
+/annotations_pathway.jsonl
+/annotations_protein.jsonl
+/annotations_cell_compartment.dev.spacy
+/annotations_cell_compartment.train.spacy
+/annotations_cell_type.dev.spacy
+/annotations_cell_type.train.spacy
+/annotations_chemical.dev.spacy
+/annotations_chemical.train.spacy
+/annotations_disease.dev.spacy
+/annotations_disease.train.spacy
+/annotations_drug.dev.spacy
+/annotations_drug.train.spacy
+/annotations_organ.dev.spacy
+/annotations_organ.train.spacy
+/annotations_organism.dev.spacy
+/annotations_organism.train.spacy
+/annotations_pathway.dev.spacy
+/annotations_pathway.train.spacy
+/annotations_protein.dev.spacy
+/annotations_protein.train.spacy
