--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ scikit-learn==0.24.1
 scispacy==0.4.0
 sentence-transformers==1.0.4
 spacy==3.0.6
+spacy-transformers==1.0.2
 typer==0.3.2
 srsly==2.4.1
 torch==1.8.1
