--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -54,6 +54,10 @@ jobs:
         if: matrix.python-version == '3.7'
         run: tox -vv -e lint
 
+      - name: Homebrew mysql installation
+        if: matrix.os == 'macos-latest'
+        run: brew install mysql
+
       - name: tests and coverage
         run: tox -vv -e ${{ matrix.tox-env }} -- --color=yes
 
