--- a/requirements-data_and_models.txt
+++ b/requirements-data_and_models.txt
@@ -15,6 +15,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
+cupy-cuda102==8.6.0
 PyYAML==5.4.1
 dvc[ssh]==2.0.17
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
@@ -24,7 +25,7 @@ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_craft_
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_jnlpba_md-0.4.0.tar.gz
 matplotlib==3.4.1
 scipy==1.6.2
-transformers==4.5.1
 spacy_lookups_data==1.0.0
 srsly==2.4.1
+transformers==4.5.1
 typer==0.3.2
