--- a/.dockerignore
+++ b/.dockerignore
@@ -14,10 +14,10 @@
 #
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
-/.git/
+
 /.tox/
 /assets/
-/data_and_models/
+/data/
 /docs/
 /htmlcov/
 /notebooks/
