Fix flake8 issues

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-sources = setup.py src/bluesearch tests benchmarks
+sources = setup.py src/bluesearch tests benchmarks data_and_models
 envlist = lint, py{37, 38, 39}, docs, check-packaging
 
 [testenv]
@@ -133,6 +133,9 @@ show_missing = False
 
 [flake8]
 count = False
+extend-exclude =
+    data_and_models/pipelines/sentence_embedding/scripts/
+    data_and_models/pipelines/ner/transformers_vs_spacy/transformers/
 max-line-length = 88
 extend-ignore = E203
 docstring-convention = numpy
