Fix isort issues

--- a/tox.ini
+++ b/tox.ini
@@ -146,3 +146,6 @@ per-file-ignores =
 [isort]
 profile = black
 honor_noqa = true
+extend_skip =
+    data_and_models/pipelines/sentence_embedding/scripts/
+    data_and_models/pipelines/ner/transformers_vs_spacy/transformers/
