Fix black issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ requires = [
     "wheel",
 ]
 
+[tool.black]
+extend-exclude = """data_and_models/pipelines/ner/transformers_vs_spacy/transformers/
+|data_and_models/pipelines/sentence_embedding/scripts/"""
