Fix bandit issues

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands =
     flake8 {posargs:{[tox]sources}}
     isort --check {posargs:{[tox]sources}}
     black --check {posargs:{[tox]sources}}
-    bandit -qr --exclude "benchmarks/,tests/" {posargs:{[tox]sources}}
+    bandit -qr --exclude "benchmarks/,tests/,data_and_models/pipelines/ner/transformers_vs_spacy/transformers/" {posargs:{[tox]sources}}
     mypy --exclude "benchmarks/conftest.py" {posargs:{[tox]sources}}
 
 [testenv:format]
