Create overload for ner_report

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,8 @@ deps =
     sqlalchemy-stubs==0.4
     types-PyYAML==5.4.3
     types-requests==2.25.0
-    types-setuptools
+    types-setuptools==57.0.0
+    typing-extensions==3.10.0.0
 commands =
     flake8 {posargs:{[tox]sources}}
     isort --check {posargs:{[tox]sources}}
