Integrate Stan's comments

--- a/tox.ini
+++ b/tox.ini
@@ -52,9 +52,7 @@ commands =
     black --check {posargs:{[tox]sources}}
     bandit -qr --exclude "benchmarks/,tests/,data_and_models/pipelines/ner/transformers_vs_spacy/transformers/" \
     {posargs:{[tox]sources}}
-    mypy \
-    --exclude "benchmarks/conftest.py|data_and_models/pipelines/ner/transformers_vs_spacy/transformers/|data_and_models/pipelines/sentence_embedding/scripts/" \
-    {posargs:{[tox]sources}}
+    mypy {posargs:{[tox]sources}}
 
 [testenv:format]
 basepython = python3.7
