--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask==1.1.2
 SQLAlchemy[mysql,pymysql]==1.4.8
 catalogue==2.0.3
 cryptography==3.4.7
+en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz
 h5py==3.2.1
 ipython==7.22.0
 ipywidgets==7.6.3
@@ -29,7 +30,6 @@ pandas==1.2.4
 python-dotenv==0.17.0
 requests==2.25.1
 scikit-learn==0.24.1
-scispacy==0.4.0
 sentence-transformers==1.0.4
 spacy==3.0.6
 spacy-transformers==1.0.2
