--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -1,6 +1,7 @@
 stages:
   training_transformers:
     cmd: >-
+      CUDA_VISIBLE_DEVICES=0,1,2,3
       python training_transformers/train.py
       --model_name_or_path clagator/biobert_v1.1_pubmed_nli_sts
       --train_data_file training_transformers/sentences-filtered_11-527-877.txt
