Convert warnings to errors in pytest

--- a/tox.ini
+++ b/tox.ini
@@ -110,6 +110,7 @@ commands =
 [pytest]
 testpaths = tests
 filterwarnings =
+    error
     ignore:Passing unrecoginized arguments to super:DeprecationWarning
 addopts =
     --cov
