Fix warnings in conftest.py

--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,10 @@ commands =
 testpaths = tests
 filterwarnings =
     error
+    ; From "import docker" in conftest.py
+    ignore:The _yaml extension module is now located at yaml._yaml:DeprecationWarning:_yaml
+    ; From "import docker" in conftest.py
+    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:invoke
     ignore:Passing unrecoginized arguments to super:DeprecationWarning
 addopts =
     --cov
