--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -70,11 +70,16 @@ stages:
   add_er:
     foreach: ${entities}
     do:
+      # Regarding the use of 'sed':
+      # See for details https://github.com/BlueBrain/Search/pull/395.
+      # Will be removed by https://github.com/BlueBrain/Search/issues/310.
       cmd: >-
         python add_er.py
         --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
         --model ../../models/ner/model-${item}/model-best/
         --output_file ../../models/ner_er/model-${item}
+        &&
+        sed -i "s|$(pwd)/||g" ../../models/ner_er/model-${item}/transformer/model/*.json
       deps:
       - Dockerfile
       - add_er.py
