Fix warnings in pytest test collection

--- a/tox.ini
+++ b/tox.ini
@@ -109,12 +109,18 @@ commands =
 
 [pytest]
 testpaths = tests
+; To check if a third-party package still produces warnings run "python -We -c 'import <package>'".
+; To check if some of the ignores are still required changed the respective "ignore" to "error" and
+; re-run pytest (potentially with parameters --co or -x).
 filterwarnings =
     error
-    ; From "import docker" in conftest.py
+    ; From "import docker"
     ignore:The _yaml extension module is now located at yaml._yaml:DeprecationWarning:_yaml
-    ; From "import docker" in conftest.py
     ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:invoke
+    ; From "import transformers"
+    ignore:Creating a LegacyVersion has been deprecated:DeprecationWarning:packaging.version
+    ; From "import flask"
+    ignore:Importing 'itsdangerous.json' is deprecated:DeprecationWarning:flask[.*]
     ignore:Passing unrecoginized arguments to super:DeprecationWarning
 addopts =
     --cov
