Fix BaseResponse warning by flask

--- a/tox.ini
+++ b/tox.ini
@@ -121,6 +121,8 @@ filterwarnings =
     ignore:Creating a LegacyVersion has been deprecated:DeprecationWarning:packaging.version
     ; From "import flask"
     ignore:Importing 'itsdangerous.json' is deprecated:DeprecationWarning:flask[.*]
+    ; From "EmbeddingServer(...).test_client().post(...)"
+    ignore:'BaseResponse' is deprecated:DeprecationWarning:flask.app
     ignore:Passing unrecoginized arguments to super:DeprecationWarning
 addopts =
     --cov
