--- a/tox.ini
+++ b/tox.ini
@@ -131,6 +131,9 @@ addopts =
     --verbosity=1
     --last-failed-no-failures=all
     -m "not slow"
+    ; To suppress a warning raised by the spacy.load(...) call in the model_entities fixture.
+    ; See https://github.com/explosion/spaCy/issues/8730
+    -p no:unraisableexception
 markers =
     slow: mark denoting a test that is too slow / requires too many resources
 
