--- a/tox.ini
+++ b/tox.ini
@@ -109,16 +109,17 @@ commands =
 
 [pytest]
 testpaths = tests
-; To check if a third-party package still produces warnings run "python -We -c 'import <package>'".
-; To check if some of the ignores are still required changed the respective "ignore" to "error" and
-; re-run pytest (potentially with parameters --co or -x).
+; To check if a third-party package still produces warnings run
+; "python -We -c 'import <package>'".
+; To check if some of the ignores are still required changed the respective
+; "ignore" to "error" and re-run pytest (potentially with parameters --co or -x).
 filterwarnings =
     error
     ; From "import docker"
-    ignore:The _yaml extension module is now located at yaml._yaml:DeprecationWarning:_yaml
-    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:invoke
+    ignore:The _yaml extension module is now located:DeprecationWarning:_yaml
+    ignore:the imp module is deprecated in favour of:DeprecationWarning:invoke
     ; From "import transformers"
-    ignore:Creating a LegacyVersion has been deprecated:DeprecationWarning:packaging.version
+    ignore:Creating a LegacyVersion has been:DeprecationWarning:packaging.version
     ; From "import flask"
     ignore:Importing 'itsdangerous.json' is deprecated:DeprecationWarning:flask[.*]
     ; From "EmbeddingServer(...).test_client().post(...)"
@@ -131,8 +132,8 @@ addopts =
     --verbosity=1
     --last-failed-no-failures=all
     -m "not slow"
-    ; To suppress a warning raised by the spacy.load(...) call in the model_entities fixture.
-    ; See https://github.com/explosion/spaCy/issues/8730
+    ; To suppress a warning raised by the spacy.load(...) call in the
+    ; model_entities fixture. See https://github.com/explosion/spaCy/issues/8730
     -p no:unraisableexception
 markers =
     slow: mark denoting a test that is too slow / requires too many resources
