--- a/tox.ini
+++ b/tox.ini
@@ -134,6 +134,7 @@ addopts =
     -m "not slow"
     ; To suppress a warning raised by the spacy.load(...) call in the
     ; model_entities fixture. See https://github.com/explosion/spaCy/issues/8730
+    ; This is fixed in `spacy>=3.1.0`.
     -p no:unraisableexception
 markers =
     slow: mark denoting a test that is too slow / requires too many resources
