--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -1,4 +1,5 @@
 # Initialized with: spacy init config config.cfg -l en -p lemmatizer,ner -o accuracy -G.
+# Added manually line 81: tokenizer_config = {"model_max_length": 512} related to #385
 
 # Blue Brain Search is a text mining toolbox focused on scientific use cases.
 #
@@ -77,6 +78,7 @@ max_batch_items = 4096
 [components.transformer.model]
 @architectures = "spacy-transformers.TransformerModel.v1"
 name = "../../models/sentence_embedding/biobert_nli_sts_cord19_v1/0_Transformer/"
+tokenizer_config = {"model_max_length": 512}
 
 [components.transformer.model.get_spans]
 @span_getters = "spacy-transformers.strided_spans.v1"
