--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -1,4 +1,45 @@
 stages:
+  training_transformers:
+    cmd: >-
+      NGPUS=4 &&
+      NGPUS_AVAIL=$(nvidia-smi --list-gpus | wc -l) &&
+      if [ "$NGPUS" -gt "$NGPUS_AVAIL" ]; then echo "$NGPUS > $NGPUS_AVAIL: Not enough available GPUs!" && return 1; fi &&
+      CUDA_VISIBLE_DEVICES=$(seq 0 $(($NGPUS - 1)) | paste -sd,)
+      python training_transformers/train.py
+      --model_name_or_path clagator/biobert_v1.1_pubmed_nli_sts
+      --train_data_file training_transformers/sentences-filtered_11-527-877.txt
+      --eval_data_file training_transformers/biosses_sentences.txt
+      --line_by_line
+      --mlm
+      --output_dir ../../models/language_modeling/biobert_cord19_v1/
+      --do_train
+      --do_eval
+      --evaluation_strategy steps
+      --per_device_train_batch_size 16
+      --per_device_eval_batch_size 16
+      --logging_dir ../../models/language_modeling/biobert_cord19_v1__logs/
+      --logging_steps 5000
+      --save_steps 5000
+      --save_total_limit 20
+      --dataloader_num_workers 16
+    deps:
+    - Dockerfile
+    - training_transformers/train.py
+    - training_transformers/sentences-filtered_11-527-877.txt
+    - training_transformers/biosses_sentences.txt
+    outs:
+    - ../../models/language_modeling/biobert_cord19_v1/
+  fine_tuning_transformers:
+    cmd: >-
+      python training_transformers/fine_tune.py
+      ../../models/language_modeling/biobert_cord19_v1/
+      ../../models/sentence_embedding/biobert_nli_sts_cord19_v1/
+    deps:
+    - Dockerfile
+    - training_transformers/fine_tune.py
+    - ../../models/language_modeling/biobert_cord19_v1/
+    outs:
+    - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1/
   training:
     foreach:
       - tf_idf
