Convert warnings to errors in unit tests (#403)
Several warnings lead to fixes in our code:
* Replace Engine.table_names() by Inspector.get_table_names()
* Replace Engine.has_table() by Inspector.has_table()
* Remove button_width style in RadioButtons
  Apparently this style is not available for this widget.
  Maybe it worked in the past but got phased out. I tested in
  jupyter lab and this style does not seem to have any effect
  indeed.
  I checked by running the widget that the look is exactly
  the same with and without that style. So it's totally safe to
  delete them.
* Add entity ruler only if there are rules
* Make arguments keyword-only in DataFrame.drop
* Replace Britney Spears by Elvis Presley in tests :( otherwise
  spacy's NER fails. Starting from en_core_web_sm==3.1.0
  Britney Spears is for some reason recognized as ORG.

Further it was necessary to update the `requirements*.txt` files
to match the CI unit tests. (In CI we install the latest versions)

After all fixes the only warnings that remain come from the
`docker` package. These were filtered in several places
directly in the test source files.

--- a/tox.ini
+++ b/tox.ini
@@ -115,7 +115,7 @@ commands =
 [pytest]
 testpaths = tests
 filterwarnings =
-    ignore:Passing unrecoginized arguments to super:DeprecationWarning
+    error
 addopts =
     --cov
     --cov-config=tox.ini
