Revert accidental changes to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -117,7 +117,11 @@ testpaths = tests
 filterwarnings =
     error
 addopts =
+    --cov
+    --cov-config=tox.ini
     --no-cov-on-fail
+    --durations=20
+    --verbosity=1
     --last-failed-no-failures=all
     -m "not slow"
 markers =
