Add the "network" pytest marker + no mark filter in CI

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ download = true
 deps = en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
 extras = dev
 allowlist_externals = docker
-commands = pytest {posargs:tests}
+commands = pytest -m "" {posargs:tests}
 
 [testenv:lint]
 basepython = python3.7
@@ -123,9 +123,10 @@ addopts =
     --durations=20
     --verbosity=1
     --last-failed-no-failures=all
-    -m "not slow"
+    -m "not slow and not network"
 markers =
-    slow: mark denoting a test that is too slow / requires too many resources
+    network: tests that require a network connection
+    slow: tests that are slow
 
 [coverage:run]
 source = bluesearch
