--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,9 @@ envlist = lint, py{37, 38, 39}, docs, check-packaging
 
 [testenv]
 download = true
-deps = en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
+deps =
+    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
+    en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz
 extras = dev
 allowlist_externals = docker
 commands = pytest -m "" {posargs:tests}
