--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ jupyterlab==3.0.17
 langdetect==1.0.9
 numpy==1.21.0
 pandas==1.3.0
+pyserde==0.4.0
 python-dotenv==0.18.0
 requests==2.26.0
 scikit-learn==0.24.2
