--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,9 @@ ipython==7.25.0
 ipywidgets==7.6.3
 jupyterlab==3.0.17
 langdetect==1.0.9
+mashumaro==2.7
 numpy==1.21.0
 pandas==1.3.0
-pyserde==0.4.0
 python-dotenv==0.18.0
 requests==2.26.0
 scikit-learn==0.24.2
