--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ ipython==7.25.0
 ipywidgets==7.6.3
 jupyterlab==3.0.17
 langdetect==1.0.9
+mashumaro==2.7
 numpy==1.21.0
 pandas==1.3.0
 python-dotenv==0.18.0
