Revert "Add debug statements"
This reverts commit 8e79d50b210d00a47e609a2ca55e693028955074.

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
     en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz
 extras = dev
 allowlist_externals = docker
-commands = pytest -s -m "" {posargs:tests}
+commands = pytest -m "" {posargs:tests}
 
 [testenv:lint]
 basepython = python3.7
